# controllers/Default.js
@@ -13,3 +13,7 @@ module.exports.buildHeatMap = function buildHeatMap (req, res, next) {
 module.exports.registerLocation = function registerLocation (req, res, next) {
   Default.registerLocation(req.swagger.params, res, next);
 };
+
+module.exports.deleteLocations = function deleteLocations (req, res, next) {
+  Default.deleteLocations(req.swagger.params, res, next);
+};
